--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -5,8 +5,6 @@ body {
 
 @font-face {
   font-family: "SEGA LOGO FONT";
-  font-style: normal;
-  font-weight: normal;
   src: local("SEGA LOGO FONT"), url("../fonts/SEGA.woff") format("woff");
 }
 
@@ -20,13 +18,20 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   grid-gap: 2em;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   justify-items: center;
   padding: 3em 1em 3em 1em;
 }
 
+.fill {
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
+.fit {
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
 input {
-  max-width: 400px !important;
+  max-width: 300px !important;
 }
 
 .height-spacement {
