--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,6 +1,24 @@
+html {
+  font-family: ProximaNova, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 15px;
+  font-weight: normal;
+  line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
+  background: #fff;
+  color: #666;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
 html,
 body {
   overflow: hidden;
+  margin: 0;
+}
+
+input {
+  max-width: 300px !important;
 }
 
 @font-face {
@@ -8,9 +26,10 @@ body {
   src: local("SEGA LOGO FONT"), url("../fonts/SEGA.woff") format("woff");
 }
 
-.sega-font {
+danger {
+  margin: 1em 0 1em 0 !important;
   font-family: "SEGA LOGO FONT";
-  color: #1e87f0;
+  color: red !important;
 }
 
 .wrapper {
@@ -28,41 +47,4 @@ body {
 
 .fit {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-}
-
-input {
-  max-width: 300px !important;
-}
-
-.height-spacement {
-  margin: 1em 0 1em 0 !important;
-}
-
-.scroll {
-  overflow-y: scroll;
-  height: 80vh;
-}
-
-.scroll::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-.scroll::-webkit-scrollbar-track {
-  background-color: rgba(0, 0, 0, 0.4);
-  border-radius: 10px;
-}
-.scroll::-webkit-scrollbar-thumb {
-  background-color: #e78632;
-  background-image: -webkit-linear-gradient(
-    45deg,
-    rgba(255, 255, 255, 0.3) 20%,
-    transparent 20%,
-    transparent 40%,
-    rgba(255, 255, 255, 0.3) 40%,
-    rgba(255, 255, 255, 0.3) 60%,
-    transparent 60%,
-    transparent 80%,
-    rgba(255, 255, 255, 0.3) 80%
-  );
-  border-radius: 10px;
 }
