--- a/src/assets/style/css/flip-card.css
+++ b/src/assets/style/css/flip-card.css
@@ -28,9 +28,9 @@
 
 .card-front,
 .card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: absolute !important;
+  width: 100% !important;
+  height: 100% !important;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
