--- a/src/assets/style/css/index.css
+++ b/src/assets/style/css/index.css
@@ -1,71 +1,78 @@
-.card {
-  position: relative;
-  box-sizing: border-box;
-  transition: box-shadow 0.1s ease-in-out;
-}
-.card * {
-  color: #fff;
-}
-.card-badge {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  z-index: 1;
-}
-.card-badge:first-child + * {
-  margin-top: 0;
-}
-.card-hover:not(.card-default):not(.card):not(.card-black):hover {
-  background: #fff;
-  box-shadow: 0 14px 25px rgba(0, 0, 0, 0.16);
-}
-.card-default {
+html {
+  font-family: ProximaNova, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 15px;
+  font-weight: normal;
+  line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
   background: #fff;
   color: #666;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
-.card-default .card-title {
-  color: #222;
+html,
+body {
+  overflow: hidden;
+  margin: 0;
 }
-.card-default.card-hover:hover {
-  background-color: #fff;
-  box-shadow: 0 14px 25px rgba(0, 0, 0, 0.16);
+
+input {
+  max-width: 300px !important;
 }
-.card-default .card-header {
-  border-bottom: 1px solid #e5e5e5;
+
+@font-face {
+  font-family: "SEGA LOGO FONT";
+  src: local("SEGA LOGO FONT"), url("../../fonts/SEGA.woff") format("woff");
 }
-.card-default .card-footer {
-  border-top: 1px solid #e5e5e5;
+
+danger {
+  margin: 1em 0 1em 0 !important;
+  font-family: "SEGA LOGO FONT";
+  color: red !important;
 }
-.card-red {
-  background: #f0506e;
-  color: #fff;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
+
+.wrapper {
+  display: grid;
+  max-width: 1200px;
+  margin: 0 auto;
+  grid-gap: 2em;
+  justify-items: center;
+  padding: 3em 1em 3em 1em;
 }
-.card-red .card-title {
-  color: #fff;
+
+.fill {
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
-.card-red.card-hover:hover {
-  background-color: #f0506e;
-  box-shadow: 0 14px 25px rgba(0, 0, 0, 0.16);
+
+.fit {
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
-.card-blue {
-  background: #1e87f0;
-  color: #fff;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
+
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
 }
-.card-blue .card-title {
-  color: #fff;
+
+.hvr-grow:active,
+.hvr-grow:focus,
+.hvr-grow:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
-.card-blue.card-hover:hover {
-  background-color: #1e87f0;
-  box-shadow: 0 14px 25px rgba(0, 0, 0, 0.16);
-}
+
 .label {
   display: inline-block;
   padding: 0 10px;
   background: white;
-  color: black;
+  color: black !important;
   line-height: 1.5;
   font-size: 12px;
   font-weight: 500;
